Solution lab-web-scraping

--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,8 +109,8 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "id": "dd8cae00",
+      "execution_count": 3,
+      "id": "bf5cb3c4",
       "metadata": {},
       "outputs": [
         {
@@ -138,7 +138,7 @@
         "from bs4 import BeautifulSoup\n",
         "import requests\n",
         "\n",
-        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "def scrape_imdb(title_type, user_rating, start_date, end_date, total_pages=5):\n",
         "    headers = {\n",
         "        'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.3',\n",
         "        'Accept-Language': 'en-US,en;q=0.9',\n",
@@ -149,45 +149,55 @@
         "        'Referer': 'https://www.google.com'\n",
         "    }\n",
         "    \n",
-        "    url = f\"https://www.imdb.com/search/title/?title_type={title_type}&release_date={start_date},{end_date}&user_rating={user_rating}\"\n",
-        "    response = requests.get(url, headers=headers)\n",
+        "    base_url = f\"https://www.imdb.com/search/title/?title_type={title_type}&release_date={start_date},{end_date}&user_rating={user_rating}\"\n",
+        "    all_movie_data = []\n",
+        "\n",
+        "    for page in range(total_pages):\n",
+        "        start = page * 50 + 1  # IMDb paginates with 50 results per page\n",
+        "        page_url = f\"{base_url}&start={start}&ref_=adv_nxt\"\n",
+        "        response = requests.get(page_url, headers=headers)\n",
+        "        \n",
+        "        if response.status_code != 200:\n",
+        "            print(f\"Error fetching page {page + 1}\")\n",
+        "            continue\n",
+        "        \n",
+        "        soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "        \n",
+        "        # Extraer datos\n",
+        "        titles = soup.find_all('h3', class_='ipc-title__text')\n",
+        "        metadata_elements = soup.find_all(class_='sc-b189961a-8 hCbzGp dli-title-metadata-item')\n",
+        "        description_elements = soup.find_all(class_='ipc-html-content-inner-div')\n",
+        "        votes_elements = soup.find_all(class_='ipc-rating-star--voteCount')\n",
+        "        \n",
+        "        # Procesar datos\n",
+        "        movie_numbers = [title.text.split('. ', 1)[0] for title in titles if '. ' in title.text]\n",
+        "        movie_titles = [title.text.split('. ', 1)[1] for title in titles if '. ' in title.text]\n",
+        "        years, runtimes, ratings = [], [], []\n",
+        "        \n",
+        "        for element in metadata_elements:\n",
+        "            text = element.text.strip()\n",
+        "            if text.isdigit() and len(text) == 4:\n",
+        "                years.append(text)\n",
+        "            elif 'h' in text and 'm' in text:\n",
+        "                runtimes.append(text)\n",
+        "            elif text in ['G', 'PG', 'PG-13', 'R', 'NC-17']:\n",
+        "                ratings.append(text)\n",
+        "        \n",
+        "        descriptions = [desc.text.strip() for desc in description_elements]\n",
+        "        votes = [vote.text.strip() for vote in votes_elements]\n",
+        "        \n",
+        "        # Asegurarse de que la longitud de las listas sea consistente\n",
+        "        max_length = min(len(movie_numbers), len(movie_titles), len(years), len(ratings), len(runtimes), len(descriptions), len(votes))\n",
+        "        \n",
+        "        movie_data = list(zip(movie_numbers[:max_length], movie_titles[:max_length], years[:max_length], ratings[:max_length], runtimes[:max_length], descriptions[:max_length], votes[:max_length]))\n",
+        "        all_movie_data.extend(movie_data)\n",
         "    \n",
-        "    if response.status_code != 200:\n",
-        "        print(\"Error fetching the IMDb page\")\n",
-        "        return None\n",
-        "    \n",
-        "    soup = BeautifulSoup(response.content, 'html.parser')\n",
-        "    \n",
-        "    # Extraer datos\n",
-        "    titles = soup.find_all('h3', class_='ipc-title__text')\n",
-        "    metadata_elements = soup.find_all(class_='sc-b189961a-8 hCbzGp dli-title-metadata-item')\n",
-        "    description_elements = soup.find_all(class_='ipc-html-content-inner-div')\n",
-        "    votes_elements = soup.find_all(class_='ipc-rating-star--voteCount')\n",
-        "    \n",
-        "    # Procesar datos\n",
-        "    movie_numbers = [title.text.split('. ', 1)[0] for title in titles if '. ' in title.text]\n",
-        "    movie_titles = [title.text.split('. ', 1)[1] for title in titles if '. ' in title.text]\n",
-        "    years, runtimes, ratings = [], [], []\n",
-        "    \n",
-        "    for element in metadata_elements:\n",
-        "        text = element.text.strip()\n",
-        "        if text.isdigit() and len(text) == 4:\n",
-        "            years.append(text)\n",
-        "        elif 'h' in text and 'm' in text:\n",
-        "            runtimes.append(text)\n",
-        "        elif text in ['G', 'PG', 'PG-13', 'R', 'NC-17']:\n",
-        "            ratings.append(text)\n",
-        "    \n",
-        "    descriptions = [desc.text.strip() for desc in description_elements]\n",
-        "    votes = [vote.text.strip() for vote in votes_elements]\n",
-        "    \n",
-        "    movie_data = list(zip(movie_numbers, movie_titles, years, ratings, runtimes, descriptions, votes))\n",
-        "    df = pd.DataFrame(movie_data, columns=[\"Movie Nr\", \"Title\", \"Year\", \"Rating\", \"Runtime (min)\", \"Description\", \"Votes\"])\n",
+        "    df = pd.DataFrame(all_movie_data, columns=[\"Movie Nr\", \"Title\", \"Year\", \"Rating\", \"Runtime (min)\", \"Description\", \"Votes\"])\n",
         "    \n",
         "    return df\n",
         "\n",
         "# Probar la función\n",
-        "df = scrape_imdb('feature', '7.5', '1990-01-01', '1992-12-31')\n",
+        "df = scrape_imdb('feature', '7.5', '1990-01-01', '1992-12-31', total_pages=3)\n",
         "print(df.head())\n"
       ]
     },
@@ -223,7 +233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea",
       "metadata": {
         "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea"
