--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -117,7 +117,7 @@
         {
           "data": {
             "text/plain": [
-              "'import requests\\nfrom bs4 import BeautifulSoup\\nimport pandas as pd\\nimport time\\n\\ndef scrape_books(min_rating, max_price):\\n    base_url = \\'http://books.toscrape.com/catalogue/page-{}.html\\'\\n    book_data = []\\n    page = 1\\n    \\n    while True:\\n        print(f\"Scraping page {page}...\")\\n        \\n        response = requests.get(base_url.format(page))\\n        if response.status_code != 200:\\n            print(f\"Failed to retrieve page {page}. Status code: {response.status_code}\")\\n            break  # Or handle retry logic here\\n        \\n        soup = BeautifulSoup(response.content, \\'html.parser\\')\\n        books = soup.find_all(\\'article\\', class_=\\'product_pod\\')\\n        \\n        if not books:\\n            break\\n            \\n        for book in books:\\n            title = book.h3.a[\\'title\\']\\n            price = float(book.find(\\'p\\', class_=\\'price_color\\').text.strip(\\'£\\'))\\n            rating_str = book.p[\\'class\\'][1]\\n            rating = {\\'One\\': 1, \\'Two\\': 2, \\'Three\\': 3, \\'Four\\': 4, \\'Five\\': 5}[rating_str]\\n            availability = book.find(\\'p\\', class_=\\'instock availability\\').text.strip()\\n            \\n            # Get detail page URL to fetch additional info like genre and description\\n            href = book.h3.a[\\'href\\']\\n            book_url = \"http://books.toscrape.com/catalogue/\" + href\\n            \\n            # Requesting the book\\'s detail page\\n            book_response = requests.get(book_url)\\n            book_soup = BeautifulSoup(book_response.content, \\'html.parser\\')\\n            \\n            # Extracting genre from breadcrumb\\n            genre = book_soup.find(\\'ul\\', class_=\\'breadcrumb\\').find_all(\\'li\\')[2].text.strip()\\n            \\n            # Extracting description (if available)\\n            description_tag = book_soup.select_one(\\'#product_page > p\\')\\n            description = description_tag.text.strip() if description_tag else \\'No description available\\'\\n            \\n            if rating >= min_rating and price <= max_price:\\n                book_data.append([title, price, rating, genre, availability, description])\\n        \\n        page += 1\\n        \\n        # Introduce a short delay to be polite and avoid hitting the server too hard\\n        time.sleep(1)\\n    \\n    df = pd.DataFrame(book_data, columns=[\\'Title\\', \\'Price (£)\\', \\'Rating\\', \\'Genre\\', \\'Availability\\', \\'Description\\'])\\n    return df\\n\\n# Example usage\\ndf = scrape_books(min_rating=4, max_price=20)\\nprint(df.head())'"
+              "'import requests\\nfrom bs4 import BeautifulSoup\\nimport pandas as pd\\nimport time\\n\\ndef scrape_books(min_rating, max_price):\\n    \\n    # Base URL for the book catalog:\\n    base_url = \\'http://books.toscrape.com/catalogue/page-{}.html\\'\\n    \\n    # Initialize an empty list to store book data:\\n    book_data = []\\n    \\n    # Start with first page of the catalog:\\n    page = 1\\n    \\n    while True:\\n        print(f\"Scraping page {page}...\")\\n        \\n        # Make HTTP request to fetch content of the current page:\\n        response = requests.get(base_url.format(page))\\n        \\n        # Break loop if the page request is unsuccessful:\\n        if response.status_code != 200:\\n            print(f\"Failed to retrieve page {page}. Status code: {response.status_code}\")\\n            break\\n        \\n        # Parse HTML content of the page:\\n        soup = BeautifulSoup(response.content, \\'html.parser\\')\\n        \\n        # Find all book articles on the page:\\n        books = soup.find_all(\\'article\\', class_=\\'product_pod\\')\\n        \\n        # If no books are found, break loop (end of catalog):\\n        if not books:\\n            break\\n            \\n        for book in books:\\n            # Extract title of the book:\\n            title = book.h3.a[\\'title\\']\\n            \\n            # Extract price of book and convert it to float:\\n            price = float(book.find(\\'p\\', class_=\\'price_color\\').text.strip(\\'£\\'))\\n            \\n            # Extract and map rating class to its corresponding integer value:\\n            rating_str = book.p[\\'class\\'][1]\\n            rating = {\\'One\\': 1, \\'Two\\': 2, \\'Three\\': 3, \\'Four\\': 4, \\'Five\\': 5}[rating_str]\\n            \\n            # Extract availability information (in stock or not):\\n            availability = book.find(\\'p\\', class_=\\'instock availability\\').text.strip()\\n            \\n            # Get URL of the book\\'s detail page to fetch additional information:\\n            href = book.h3.a[\\'href\\']\\n            book_url = \"http://books.toscrape.com/catalogue/\" + href\\n            \\n            # Make an HTTP request to book\\'s detail page:\\n            book_response = requests.get(book_url)\\n            book_soup = BeautifulSoup(book_response.content, \\'html.parser\\')\\n            \\n            # Extract genre from the breadcrumb navigation:\\n            genre = book_soup.find(\\'ul\\', class_=\\'breadcrumb\\').find_all(\\'li\\')[2].text.strip()\\n            \\n            # Extract description (if available), or set a default message:\\n            description_tag = book_soup.select_one(\\'#product_page > p\\')\\n            description = description_tag.text.strip() if description_tag else \\'No description available\\'\\n            \\n            # Append book data to list if it meets rating and price criteria:\\n            if rating >= min_rating and price <= max_price:\\n                book_data.append([title, price, rating, genre, availability, description])\\n        \\n        # Move to next page:\\n        page += 1\\n        \\n        # Introduce a short delay to avoid overwhelming the server with requests:\\n        time.sleep(1)\\n    \\n    # Convert list of book data into a pandas DataFrame:\\n    df = pd.DataFrame(book_data, columns=[\\'Title\\', \\'Price (£)\\', \\'Rating\\', \\'Genre\\', \\'Availability\\', \\'Description\\'])\\n    \\n    # Return DataFrame:\\n    return df\\n\\n# Example usage: Fetch books with a minimum rating of 4 and a maximum price of £20:\\ndf = scrape_books(min_rating=4, max_price=20)\\nprint(df.head())'"
             ]
           },
           "execution_count": 1,
@@ -132,58 +132,83 @@
         "import time\n",
         "\n",
         "def scrape_books(min_rating, max_price):\n",
+        "    \n",
+        "    # Base URL for the book catalog:\n",
         "    base_url = 'http://books.toscrape.com/catalogue/page-{}.html'\n",
+        "    \n",
+        "    # Initialize an empty list to store book data:\n",
         "    book_data = []\n",
+        "    \n",
+        "    # Start with first page of the catalog:\n",
         "    page = 1\n",
         "    \n",
         "    while True:\n",
         "        print(f\"Scraping page {page}...\")\n",
         "        \n",
+        "        # Make HTTP request to fetch content of the current page:\n",
         "        response = requests.get(base_url.format(page))\n",
+        "        \n",
+        "        # Break loop if the page request is unsuccessful:\n",
         "        if response.status_code != 200:\n",
         "            print(f\"Failed to retrieve page {page}. Status code: {response.status_code}\")\n",
-        "            break  # Or handle retry logic here\n",
+        "            break\n",
         "        \n",
+        "        # Parse HTML content of the page:\n",
         "        soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "        \n",
+        "        # Find all book articles on the page:\n",
         "        books = soup.find_all('article', class_='product_pod')\n",
         "        \n",
+        "        # If no books are found, break loop (end of catalog):\n",
         "        if not books:\n",
         "            break\n",
         "            \n",
         "        for book in books:\n",
+        "            # Extract title of the book:\n",
         "            title = book.h3.a['title']\n",
+        "            \n",
+        "            # Extract price of book and convert it to float:\n",
         "            price = float(book.find('p', class_='price_color').text.strip('£'))\n",
+        "            \n",
+        "            # Extract and map rating class to its corresponding integer value:\n",
         "            rating_str = book.p['class'][1]\n",
         "            rating = {'One': 1, 'Two': 2, 'Three': 3, 'Four': 4, 'Five': 5}[rating_str]\n",
+        "            \n",
+        "            # Extract availability information (in stock or not):\n",
         "            availability = book.find('p', class_='instock availability').text.strip()\n",
         "            \n",
-        "            # Get detail page URL to fetch additional info like genre and description\n",
+        "            # Get URL of the book's detail page to fetch additional information:\n",
         "            href = book.h3.a['href']\n",
         "            book_url = \"http://books.toscrape.com/catalogue/\" + href\n",
         "            \n",
-        "            # Requesting the book's detail page\n",
+        "            # Make an HTTP request to book's detail page:\n",
         "            book_response = requests.get(book_url)\n",
         "            book_soup = BeautifulSoup(book_response.content, 'html.parser')\n",
         "            \n",
-        "            # Extracting genre from breadcrumb\n",
+        "            # Extract genre from the breadcrumb navigation:\n",
         "            genre = book_soup.find('ul', class_='breadcrumb').find_all('li')[2].text.strip()\n",
         "            \n",
-        "            # Extracting description (if available)\n",
+        "            # Extract description (if available), or set a default message:\n",
         "            description_tag = book_soup.select_one('#product_page > p')\n",
         "            description = description_tag.text.strip() if description_tag else 'No description available'\n",
         "            \n",
+        "            # Append book data to list if it meets rating and price criteria:\n",
         "            if rating >= min_rating and price <= max_price:\n",
         "                book_data.append([title, price, rating, genre, availability, description])\n",
         "        \n",
+        "        # Move to next page:\n",
         "        page += 1\n",
         "        \n",
-        "        # Introduce a short delay to be polite and avoid hitting the server too hard\n",
+        "        # Introduce a short delay to avoid overwhelming the server with requests:\n",
         "        time.sleep(1)\n",
         "    \n",
+        "    # Convert list of book data into a pandas DataFrame:\n",
         "    df = pd.DataFrame(book_data, columns=['Title', 'Price (£)', 'Rating', 'Genre', 'Availability', 'Description'])\n",
+        "    \n",
+        "    # Return DataFrame:\n",
         "    return df\n",
         "\n",
-        "# Example usage\n",
+        "# Example usage: Fetch books with a minimum rating of 4 and a maximum price of £20:\n",
         "df = scrape_books(min_rating=4, max_price=20)\n",
         "print(df.head())\"\"\""
       ]
@@ -313,20 +338,20 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "\n",
-        "# Load the scraped data from CSV\n",
+        "# Load scraped data from CSV:\n",
         "df = pd.read_csv('scraped_books.csv')\n",
         "\n",
-        "# Summary statistics\n",
+        "# Summary statistics:\n",
         "summary = df.describe()\n",
         "print(\"Summary statistics:\\n\", summary)\n",
         "\n",
-        "# Check for missing values\n",
+        "# Check for missing values:\n",
         "print(\"\\nMissing values:\\n\", df.isnull().sum())\n",
         "\n",
-        "# Preview data\n",
+        "# Preview data:\n",
         "print(\"\\nSample data:\\n\", df.head())\n",
         "\n",
-        "# Visualization - Price Distribution\n",
+        "# Visualization - Price Distribution:\n",
         "plt.figure(figsize=(10, 6))\n",
         "sns.histplot(df['Price (£)'], bins=20, kde=True)\n",
         "plt.title('Price Distribution of Scraped Books')\n",
@@ -334,7 +359,7 @@
         "plt.ylabel('Number of Books')\n",
         "plt.show()\n",
         "\n",
-        "# Better Visualization - Rating Distribution\n",
+        "# Visualization - Rating Distribution:\n",
         "plt.figure(figsize=(10, 6))\n",
         "ratings = df['Rating'].value_counts().sort_index()\n",
         "ratings_df = pd.DataFrame({'Rating': ratings.index, 'Count': ratings.values})\n",
@@ -343,7 +368,7 @@
         "plt.xlabel('Rating')\n",
         "plt.ylabel('Number of Books')\n",
         "\n",
-        "# Annotating the bar plot with counts and percentages\n",
+        "# Annotating bar plot with counts and percentages:\n",
         "for i in range(len(ratings)):\n",
         "    count = ratings.values[i]\n",
         "    percentage = (count / ratings.sum()) * 100\n",
@@ -351,7 +376,7 @@
         "\n",
         "plt.show()\n",
         "\n",
-        "# Visualization - Genre Distribution\n",
+        "# Visualization - Genre Distribution:\n",
         "plt.figure(figsize=(14, 8))\n",
         "df['Genre'].value_counts().plot(kind='bar')\n",
         "plt.title('Genre Distribution of Scraped Books')\n",
@@ -359,14 +384,6 @@
         "plt.ylabel('Number of Books')\n",
         "plt.show()"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "cd0a46ee",
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
