--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -188,13 +188,16 @@
         "            # Extract genre from the breadcrumb navigation:\n",
         "            genre = book_soup.find('ul', class_='breadcrumb').find_all('li')[2].text.strip()\n",
         "            \n",
+        "            # Extract UPC from the book details table:\n",
+        "            upc = book_soup.find('th', text='UPC').find_next_sibling('td').text.strip()\n",
+        "            \n",
         "            # Extract description (if available), or set a default message:\n",
         "            description_tag = book_soup.select_one('#product_page > p')\n",
         "            description = description_tag.text.strip() if description_tag else 'No description available'\n",
         "            \n",
         "            # Append book data to list if it meets rating and price criteria:\n",
         "            if rating >= min_rating and price <= max_price:\n",
-        "                book_data.append([title, price, rating, genre, availability, description])\n",
+        "                book_data.append([upc, title, price, rating, genre, availability, description])\n",
         "        \n",
         "        # Move to next page:\n",
         "        page += 1\n",
@@ -203,7 +206,7 @@
         "        time.sleep(1)\n",
         "    \n",
         "    # Convert list of book data into a pandas DataFrame:\n",
-        "    df = pd.DataFrame(book_data, columns=['Title', 'Price (£)', 'Rating', 'Genre', 'Availability', 'Description'])\n",
+        "    df = pd.DataFrame(book_data, columns=['UPC', 'Title', 'Price (£)', 'Rating', 'Genre', 'Availability', 'Description'])\n",
         "    \n",
         "    # Return DataFrame:\n",
         "    return df\n",
@@ -258,7 +261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "id": "5becdd49",
       "metadata": {},
       "outputs": [
@@ -383,6 +386,116 @@
         "plt.xlabel('Genre')\n",
         "plt.ylabel('Number of Books')\n",
         "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "5819ae3d",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# BONUS\n",
+        "\n",
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "import time\n",
+        "\n",
+        "def scrape_books(min_rating, max_price):\n",
+        "    \"\"\"\n",
+        "    Function to scrape book data from 'Books to Scrape' website based on rating and price criteria.\n",
+        "    \n",
+        "    Parameters:\n",
+        "    ----------\n",
+        "    min_rating : int\n",
+        "        The minimum rating filter for the books (1 to 5 stars).\n",
+        "    max_price : float\n",
+        "        The maximum price filter for the books in pounds (£).\n",
+        "        \n",
+        "    Returns:\n",
+        "    --------\n",
+        "    df: pd.DataFrame\n",
+        "        A DataFrame containing details of the books that meet the specified criteria.\n",
+        "    \"\"\"\n",
+        "    \n",
+        "    # Base URL for the book catalog\n",
+        "    base_url = 'http://books.toscrape.com/catalogue/page-{}.html'\n",
+        "    \n",
+        "    # Initialize an empty list to store book data\n",
+        "    book_data = []\n",
+        "    \n",
+        "    # Start with the first page of the catalog\n",
+        "    page = 1\n",
+        "    \n",
+        "    while True:\n",
+        "        print(f\"Scraping page {page}...\")\n",
+        "        \n",
+        "        # Make HTTP request to fetch the content of the current page\n",
+        "        response = requests.get(base_url.format(page))\n",
+        "        \n",
+        "        # Break the loop if the page request is unsuccessful\n",
+        "        if response.status_code != 200:\n",
+        "            print(f\"Failed to retrieve page {page}. Status code: {response.status_code}\")\n",
+        "            break\n",
+        "        \n",
+        "        # Parse the HTML content of the page\n",
+        "        soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "        \n",
+        "        # Find all book articles on the page\n",
+        "        books = soup.find_all('article', class_='product_pod')\n",
+        "        \n",
+        "        # If no books are found, break the loop (end of catalog)\n",
+        "        if not books:\n",
+        "            break\n",
+        "            \n",
+        "        for book in books:\n",
+        "            # Extract the title of the book\n",
+        "            title = book.h3.a['title']\n",
+        "            \n",
+        "            # Extract the price of the book and convert it to float\n",
+        "            price = float(book.find('p', class_='price_color').text.strip('£'))\n",
+        "            \n",
+        "            # Extract and map the rating class to its corresponding integer value\n",
+        "            rating_str = book.p['class'][1]\n",
+        "            rating = {'One': 1, 'Two': 2, 'Three': 3, 'Four': 4, 'Five': 5}[rating_str]\n",
+        "            \n",
+        "            # Extract availability information (in stock or not)\n",
+        "            availability = book.find('p', class_='instock availability').text.strip()\n",
+        "            \n",
+        "            # Get the URL of the book's detail page to fetch additional information\n",
+        "            href = book.h3.a['href']\n",
+        "            book_url = \"http://books.toscrape.com/catalogue/\" + href\n",
+        "            \n",
+        "            # Make an HTTP request to the book's detail page\n",
+        "            book_response = requests.get(book_url)\n",
+        "            book_soup = BeautifulSoup(book_response.content, 'html.parser')\n",
+        "            \n",
+        "            # Extract the genre from the breadcrumb navigation\n",
+        "            genre = book_soup.find('ul', class_='breadcrumb').find_all('li')[2].text.strip()\n",
+        "            \n",
+        "            # Extract the UPC information\n",
+        "            upc = book_soup.find('th', text='UPC').find_next_sibling('td').text.strip()\n",
+        "            \n",
+        "            # Extract the description (if available), or set a default message\n",
+        "            description_tag = book_soup.select_one('#product_page > p')\n",
+        "            description = description_tag.text.strip() if description_tag else 'No description available'\n",
+        "            \n",
+        "            # Append book data to the list if it meets the rating and price criteria\n",
+        "            if rating >= min_rating and price <= max_price:\n",
+        "                book_data.append([upc, title, price, rating, genre, availability, description])\n",
+        "        \n",
+        "        # Move to the next page\n",
+        "        page += 1\n",
+        "        \n",
+        "        # Introduce a short delay to avoid overwhelming the server with requests\n",
+        "        time.sleep(1)\n",
+        "    \n",
+        "    # Convert the list of book data into a pandas DataFrame\n",
+        "    df = pd.DataFrame(book_data, columns=['UPC', 'Title', 'Price (£)', 'Rating', 'Genre', 'Availability', 'Description'])\n",
+        "    \n",
+        "    # Return the DataFrame\n",
+        "    return"
       ]
     }
   ],
