--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -110,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 21,
       "id": "40359eee-9cd7-4884-bfa4-83344c222305",
       "metadata": {
         "id": "40359eee-9cd7-4884-bfa4-83344c222305"
@@ -120,9 +120,31 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "https://books.toscrape.com/catalogue/a-light-in-the-attic_1000/index.html\n",
             "{'UPC': 'a897fe39b1053632', 'Product Type': 'Books', 'Price (excl. tax)': '£51.77', 'Price (incl. tax)': '£51.77', 'Tax': '£0.00', 'Availability': 'In stock (22 available)', 'Number of reviews': '0'}\n",
-            "It's hard to imagine a world without A Light in the Attic. This now-classic collection of poetry and drawings from Shel Silverstein celebrates its 20th anniversary with this special edition. Silverstein's humorous and creative verse can amuse the dowdiest of readers. Lemon-faced adults and fidgety kids sit still and read these rhythmic words and laugh and smile and love th It's hard to imagine a world without A Light in the Attic. This now-classic collection of poetry and drawings from Shel Silverstein celebrates its 20th anniversary with this special edition. Silverstein's humorous and creative verse can amuse the dowdiest of readers. Lemon-faced adults and fidgety kids sit still and read these rhythmic words and laugh and smile and love that Silverstein. Need proof of his genius? RockabyeRockabye baby, in the treetopDon't you know a treetopIs no safe place to rock?And who put you up there,And your cradle, too?Baby, I think someone down here'sGot it in for you. Shel, you never sounded so good. ...more\n"
+            "It's hard to imagine a world without A Light in the Attic. This now-classic collection of poetry and drawings from Shel Silverstein celebrates its 20th anniversary with this special edition. Silverstein's humorous and creative verse can amuse the dowdiest of readers. Lemon-faced adults and fidgety kids sit still and read these rhythmic words and laugh and smile and love th It's hard to imagine a world without A Light in the Attic. This now-classic collection of poetry and drawings from Shel Silverstein celebrates its 20th anniversary with this special edition. Silverstein's humorous and creative verse can amuse the dowdiest of readers. Lemon-faced adults and fidgety kids sit still and read these rhythmic words and laugh and smile and love that Silverstein. Need proof of his genius? RockabyeRockabye baby, in the treetopDon't you know a treetopIs no safe place to rock?And who put you up there,And your cradle, too?Baby, I think someone down here'sGot it in for you. Shel, you never sounded so good. ...more\n",
+            "Poetry\n",
+            "{'UPC': 'a897fe39b1053632', 'Product Type': 'Books', 'Price (excl. tax)': '£51.77', 'Price (incl. tax)': '£51.77', 'Tax': '£0.00', 'Availability': 'In stock (22 available)', 'Number of reviews': '0', 'description': \"It's hard to imagine a world without A Light in the Attic. This now-classic collection of poetry and drawings from Shel Silverstein celebrates its 20th anniversary with this special edition. Silverstein's humorous and creative verse can amuse the dowdiest of readers. Lemon-faced adults and fidgety kids sit still and read these rhythmic words and laugh and smile and love th It's hard to imagine a world without A Light in the Attic. This now-classic collection of poetry and drawings from Shel Silverstein celebrates its 20th anniversary with this special edition. Silverstein's humorous and creative verse can amuse the dowdiest of readers. Lemon-faced adults and fidgety kids sit still and read these rhythmic words and laugh and smile and love that Silverstein. Need proof of his genius? RockabyeRockabye baby, in the treetopDon't you know a treetopIs no safe place to rock?And who put you up there,And your cradle, too?Baby, I think someone down here'sGot it in for you. Shel, you never sounded so good. ...more\", 'genre': 'Poetry', 'title': 'A Light in the Attic'}\n"
           ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "{'UPC': 'a897fe39b1053632',\n",
+              " 'Product Type': 'Books',\n",
+              " 'Price (excl. tax)': '£51.77',\n",
+              " 'Price (incl. tax)': '£51.77',\n",
+              " 'Tax': '£0.00',\n",
+              " 'Availability': 'In stock (22 available)',\n",
+              " 'Number of reviews': '0',\n",
+              " 'description': \"It's hard to imagine a world without A Light in the Attic. This now-classic collection of poetry and drawings from Shel Silverstein celebrates its 20th anniversary with this special edition. Silverstein's humorous and creative verse can amuse the dowdiest of readers. Lemon-faced adults and fidgety kids sit still and read these rhythmic words and laugh and smile and love th It's hard to imagine a world without A Light in the Attic. This now-classic collection of poetry and drawings from Shel Silverstein celebrates its 20th anniversary with this special edition. Silverstein's humorous and creative verse can amuse the dowdiest of readers. Lemon-faced adults and fidgety kids sit still and read these rhythmic words and laugh and smile and love that Silverstein. Need proof of his genius? RockabyeRockabye baby, in the treetopDon't you know a treetopIs no safe place to rock?And who put you up there,And your cradle, too?Baby, I think someone down here'sGot it in for you. Shel, you never sounded so good. ...more\",\n",
+              " 'genre': 'Poetry',\n",
+              " 'title': 'A Light in the Attic'}"
+            ]
+          },
+          "execution_count": 21,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -130,47 +152,40 @@
         "from bs4 import BeautifulSoup as bs\n",
         "import pandas as pd\n",
         "\n",
+        "base_url = 'https://books.toscrape.com/catalogue/'\n",
         "url = 'https://books.toscrape.com/catalogue/a-light-in-the-attic_1000/index.html'\n",
         "\n",
         "\n",
-        "\"\"\" def scrape_books(url, min_rating=4, max_pricing=20):\n",
-        "    all_books = []\n",
-        "    response = requests.get(url)\n",
-        "    soup = bs(response.content, 'html.parser')\n",
-        "    \n",
-        "  \n",
+        "def get_soup(url):\n",
+        "    data = requests.get(url)\n",
+        "    soup = bs(data.content, 'html.parser')\n",
+        "    return soup\n",
+        "\n",
+        "\n",
+        "def scrape_page(url):\n",
+        "    soup = get_soup(url)\n",
         "    books = soup.find_all('article', class_='product_pod')\n",
         "    \n",
         "    for book in books:\n",
-        "        title = book.h3.a['title']\n",
-        "        price = book.find('p', class_='price_color').text.strip('£')\n",
-        "        rating = book.p['class'][1]\n",
-        "        availability = book.find('p', class_='instock availability').text.strip()\n",
-        "        \n",
-        "        # Convert rating from text to number\n",
-        "        rating_dict = {'One': 1, 'Two': 2, 'Three': 3, 'Four': 4, 'Five': 5}\n",
-        "        rating = rating_dict.get(rating, 0)\n",
-        "        \n",
-        "        # Filter based on rating and price\n",
-        "        if rating >= min_rating and float(price) <= max_pricing:\n",
-        "            all_books.append({\n",
-        "                'Title': title,\n",
-        "                'Price (£)': float(price),\n",
-        "                'Rating': rating,\n",
-        "                'Availability': availability\n",
-        "            })\n",
-        "    \n",
-        "    df = pd.DataFrame(all_books)\n",
-        "    return df \"\"\"\n",
-        "    \n",
+        "        book_title = book.h3.a['title']\n",
+        "        book_url = base_url + book.h3.a['href']\n",
+        "        print(book_url)\n",
+        "        book_data = get_book_data(book_url)\n",
+        "        book_data['title'] = book_title\n",
+        "        print(book_data)\n",
+        "        return book_data\n",
+        "\n",
+        "\n",
         "def get_book_data(url):\n",
-        "    data = requests.get(url)\n",
-        "    soup = bs(data.content, 'html.parser')\n",
-        "    \n",
+        "    soup = get_soup(url)\n",
+        "\n",
         "    product_info = get_product_info(soup)\n",
         "    book_description = get_book_description(soup)\n",
+        "    book_genre = get_book_genre(soup)\n",
+        "    book_data = {**product_info, **book_description, **book_genre}\n",
+        "    return book_data\n",
         "    \n",
-        "    \n",
+        "\n",
         "def parse_table(table):\n",
         "    rows = table.find_all('tr')\n",
         "    book_data = {}\n",
@@ -180,18 +195,27 @@
         "        book_data[key] = value\n",
         "    return book_data\n",
         "\n",
+        "\n",
         "def get_product_info(soup):\n",
         "    book_infos = soup.find('table', class_='table-striped')\n",
         "    infos = parse_table(book_infos)\n",
         "    print(infos)\n",
-        "    return(infos)\n",
+        "    return (infos)\n",
+        "\n",
         "\n",
         "def get_book_description(soup):\n",
-        "    book_description = soup.find('div', id='product_description').find_next('p').text\n",
+        "    book_description = soup.find(\n",
+        "        'div', id='product_description').find_next('p').text\n",
         "    print(book_description)\n",
-        "    return {\"description\" : book_description}\n",
-        "    \n",
-        "get_book_data(url)"
+        "    return {\"description\": book_description}\n",
+        "\n",
+        "\n",
+        "def get_book_genre(soup):\n",
+        "    genre = soup.find('ul', class_='breadcrumb').find_all('a')[2].text\n",
+        "    print(genre)\n",
+        "    return {\"genre\": genre}\n",
+        "\n",
+        "scrape_page('https://books.toscrape.com/catalogue/page-1.html')"
       ]
     }
   ],
