--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -219,8 +219,6 @@
         "def get_product_info(soup):\n",
         "    book_infos = soup.find('table', class_='table-striped')\n",
         "    infos = parse_table(book_infos)\n",
-        "    infos['rating'] = len(soup.find_all('p', class_='star-rating'))\n",
-        "    infos['price'] = float(infos['Price (incl. tax)'][1:])\n",
         "    print(infos)\n",
         "    return (infos)\n",
         "\n",
@@ -240,6 +238,10 @@
         "    print(rating_score)\n",
         "    return {\"rating\": rating_score}\n",
         "\n",
+        "def get_price(soup):\n",
+        "    price = float(soup.find('p', class_='price_color').text[1:])\n",
+        "    print(price)\n",
+        "    return {\"price\": price}\n",
         "\n",
         "def get_book_genre(soup):\n",
         "    genre = soup.find('ul', class_='breadcrumb').find_all('a')[2].text\n",
