--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -117,6 +117,12 @@
       },
       "outputs": [],
       "source": [
+        "#todo\n",
+        "#select columns\n",
+        "#print exception\n",
+        "#add to csv\n",
+        "\n",
+        "\n",
         "import requests\n",
         "from bs4 import BeautifulSoup as bs\n",
         "import pandas as pd\n",
@@ -190,7 +196,6 @@
         "    book_data.update(book_rating)\n",
         "    print('book data :', book_data)\n",
         "    return book_data\n",
-        "\n",
         "\n",
         "\n",
         "def parse_table(table):\n",
