--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -110,12 +110,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 66,
       "id": "40359eee-9cd7-4884-bfa4-83344c222305",
       "metadata": {
         "id": "40359eee-9cd7-4884-bfa4-83344c222305"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "SyntaxError",
+          "evalue": "expected '(' (1950717311.py, line 132)",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;36m  Cell \u001b[0;32mIn[66], line 132\u001b[0;36m\u001b[0m\n\u001b[0;31m    def get_upc:\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected '('\n"
+          ]
+        }
+      ],
       "source": [
         "#todo\n",
         "#select columns\n",
@@ -240,6 +249,25 @@
         "    print('price :', price)\n",
         "    return {\"price\": price}\n",
         "\n",
+        "\"\"\"   - **UPC**: The Universal Product Code (UPC) of the book.\n",
+        "  - **Title**: The title of the book.\n",
+        "  - **Price (£)**: The price of the book in pounds.\n",
+        "  - **Rating**: The rating of the book (1-5 stars).\n",
+        "  - **Genre**: The genre of the book.\n",
+        "  - **Availability**: Whether the book is in stock or not.\n",
+        "  - **Description**: A brief description or product description of the book (if available). \"\"\"\n",
+        "  \n",
+        "def get_upc(soup):\n",
+        "    upc = get_value_from_label(soup, 'UPC')\n",
+        "    print('upc :', upc)\n",
+        "    return {\"upc\": upc}\n",
+        "\n",
+        "def get_value_from_label(soup, label):\n",
+        "    rows = soup.find('table', class_='table-striped').find_all('tr')\n",
+        "    for row in rows:\n",
+        "        if row.th.text == label:\n",
+        "            return row.td.text\n",
+        "    return None\n",
         "\n",
         "def get_book_genre(soup):\n",
         "    genre = soup.find('ul', class_='breadcrumb').find_all('a')[2].text\n",
