changed loop logic

--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -134,7 +134,10 @@
         "    all_books = []\n",
         "\n",
         "    next_page = 1\n",
-        "    last_page = 1\n",
+        "    last_page = 0  # 0 is infinity\n",
+        "\n",
+        "    if last_page == 0:\n",
+        "        last_page = float('inf')\n",
         "\n",
         "    while last_page >= next_page:\n",
         "        url = f'https://books.toscrape.com/catalogue/page-{next_page}.html'\n",
@@ -174,7 +177,7 @@
         "        if filter_book(book_data, **kwargs):\n",
         "            page_books.append(book_data)\n",
         "        else:\n",
-        "            print(f'🤬Book was filtered out')\n",
+        "            print(f'Book was filtered out')\n",
         "        print('\\n__________\\n')\n",
         "    print('page books :', page_books)\n",
         "    return page_books\n",
@@ -195,7 +198,6 @@
         "\n",
         "    print('book data :', book_data)\n",
         "    return book_data\n",
-        "\n",
         "\n",
         "\n",
         "def get_upc(soup):\n",
@@ -263,8 +265,8 @@
         "    return result\n",
         "\n",
         "\n",
-        "def export_books(DataFrame):\n",
-        "    DataFrame.to_csv('books.csv', index=False)\n",
+        "def export_books(df):\n",
+        "    df.to_csv('books.csv', index=False)\n",
         "    print('books exported to csv')"
       ]
     },
@@ -275,7 +277,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "df = pd.DataFrame(scrape_books(3, 40))\n"
+        "df = pd.DataFrame(scrape_books(4, 20))\n"
       ]
     },
     {
@@ -427,9 +429,8 @@
         }
       ],
       "source": [
-        "\n",
         "display(df)\n",
-        "df.dtypes\n"
+        "df.dtypes"
       ]
     },
     {
@@ -439,7 +440,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "\n",
         "export_books(df)"
       ]
     }
