--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -117,8 +117,29 @@
       },
       "outputs": [],
       "source": [
-        "# Your solution goes here"
+        "from bs4 import BeautifulSoup\n",
+        "import requests"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "eba7887a",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "book_url ='https://books.toscrape.com/'\n",
+        "response = requests.get(book_url)\n",
+        "response"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "6cfedc67",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
