Removed multi-line strings...
...for readability.

--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -126,7 +126,7 @@
         }
       ],
       "source": [
-        "\"\"\"import requests\n",
+        "import requests\n",
         "from bs4 import BeautifulSoup\n",
         "import pandas as pd\n",
         "import time\n",
@@ -212,7 +212,7 @@
         "\n",
         "# Fetch books with a minimum rating of 4 and a maximum price of £20:\n",
         "df = scrape_books(min_rating=4, max_price=20)\n",
-        "print(df.head())\"\"\""
+        "print(df.head())"
       ]
     },
     {
@@ -233,8 +233,8 @@
         }
       ],
       "source": [
-        "\"\"\"print(df.isnull().sum())\n",
-        "print(df.sample(10))\"\"\""
+        "print(df.isnull().sum())\n",
+        "print(df.sample(10))"
       ]
     },
     {
@@ -255,7 +255,7 @@
         }
       ],
       "source": [
-        "\"\"\"df.to_csv('scraped_books.csv', index=False)\"\"\""
+        "df.to_csv('scraped_books.csv', index=False)"
       ]
     },
     {
